--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,10 @@ include HISTORY.rst
 include LICENSE
 include README.rst
 
+include planemo/reports/*css
+include planemo/reports/*js
+include planemo/reports/*html
+
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
