Disable pypy build on travis.
Seems to have grown unstable lately due to no fault of planemo (dependency download problems before planemo install even happens).

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 #  - "3.4"
   - "2.7"
   - "2.6"
-  - "pypy"
+# pypy option seems very unreliable lately, lots of errors downloading dependencies.
+#  - "pypy"
 
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
