--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [wheel]
 universal = 1
+[nosetests]
+verbosity=1
+detailed-errors=1
+with-doctest=1
+with-coverage=1
+logging-filter=pulsar,galaxy
+logging-level=INFO
