Use nosetest in Makefile.
Now coveralls will get coverage information, nearly sure of it.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
 [wheel]
 universal = 1
+
 [nosetests]
 verbosity=1
 detailed-errors=1
 with-doctest=1
 with-coverage=1
-logging-filter=pulsar,galaxy
+logging-filter=planemo,galaxy
 logging-level=INFO
