Integration tests for shed operations...
... and refactoring. Use a flask test server to mimic the tool shed API and use that to write many more tests for tool shed related functionality.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
   - pip install coveralls --use-mirrors  # Required for coveralls reporting.
   - pip install -r requirements.txt
-  - pip install pyflakes flake8 readme coverage
+  - pip install pyflakes flake8 readme coverage flask
 
 after_success:
   - coveralls
