Fix tox setup, use for .travis.yml.
Still TODO - documenting it.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,15 +1,1 @@
-include AUTHORS.rst
-include CONTRIBUTING.rst
-include HISTORY.rst
-include LICENSE
-include README.rst
-
-include planemo/reports/*css
-include planemo/reports/*js
-include planemo/reports/*html
-
-recursive-include tests *
-recursive-exclude * __pycache__
-recursive-exclude * *.py[co]
-
-recursive-include docs *.rst conf.py Makefile make.bat
+include *.rst LICENSE
