--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,15 @@
 universal = 1
 
 [nosetests]
+exclude=planemo_ext
 verbosity=1
 detailed-errors=1
 with-doctest=1
 with-coverage=1
 logging-filter=planemo,galaxy
 logging-level=INFO
+
+
+[flake8]
+max-line-length = 150
+max-complexity = 11
