--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,15 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
-
-python:
-#  - "3.4"
-  - "2.7"
-  - "2.6"
-# pypy option seems very unreliable lately, lots of errors downloading dependencies.
-#  - "pypy"
+python: 2.7
+env:
+  - TOX_ENV=py27-lint
+  - TOX_ENV=py27-lint-readme
+  - TOX_ENV=py26
+  - TOX_ENV=py27
 
 install:
-  - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
-  - pip install coveralls --use-mirrors  # Required for coveralls reporting.
-  - pip install -r requirements.txt
-  - pip install pyflakes flake8 readme coverage flask
+  - pip install tox
+
+script: tox -e $TOX_ENV
 
 after_success:
   - coveralls
-
-# command to run tests, e.g. python setup.py test
-script: make lint && make test && if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then true; else make lint-readme; fi
-
