--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,30 @@
+# TODO: add py34-lint , py34 to envlist
+# TODO: implement doc linting
 [tox]
-envlist = py26, py27, py34
+envlist = py27-lint, py27-lint-readme, py26, py27
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/planemo
-commands = python setup.py test
+commands = {envpython} setup.py nosetests []
 deps =
-    -r{toxinidir}/requirements.txt
+    unittest2
+    nose
+    coverage
+    flask
+    coveralls
+
+[testenv:py27-lint]
+commands = flake8 planemo tests
+skip_install = True
+deps = flake8
+
+#[testenv:py34-lint]
+#commands = flake8 planemo tests
+#skip_install = True
+#deps = flake8
+
+[testenv:py27-lint-readme]
+commands = make lint-readme
+skip_install = True
+whitelist_externals = make
+deps =
+    readme
