Add Python 3.4 linter to tox.
Ensure new Planemo code is Python 3.4 compatible at syntax level at least and fix a few existing problems.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python: 2.7
 env:
   - TOX_ENV=py27-lint
+  - TOX_ENV=py34-lint
   - TOX_ENV=py27-lint-readme
   - TOX_ENV=py26
   - TOX_ENV=py27
