--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,10 @@ commands = flake8 planemo tests
 skip_install = True
 deps = flake8
 
-#[testenv:py34-lint]
-#commands = flake8 planemo tests
-#skip_install = True
-#deps = flake8
+[testenv:py34-lint]
+commands = flake8 planemo tests
+skip_install = True
+deps = flake8
 
 [testenv:py27-lint-readme]
 commands = make lint-readme
