Shed-aware shed_diff...
 - Fix shed_diff so its exit code actually is non-zero if there are differences.
 - By default - don't report differences for tool shed populates fields (toolshed, changeset_revision). This can be disabled with --raw.
 - Tests for ensure --raw and smart differencing are working and exit codes are fixed.
 - Update shed_app test app to inject the tool shed populated fields into respective arguments.

--- a/tests/data/repos/suite_auto/.shed.yml
+++ b/tests/data/repos/suite_auto/.shed.yml
@@ -1,4 +1,4 @@
-owner: devteam
+owner: iuc
 suite:
   name: suite_1
   description: "A suite of Galaxy tools designed to work with version 1.2 of the SAMtools package."
