Include required RST file in manifest.
Fixes #181.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,4 @@ include *.rst LICENSE
 include planemo/xml/xsd/*
 include planemo/xml/xsd/tool/*
 include planemo_ext/tool_factory_2/*
-
+include planemo_ext/galaxy/util/docutils_template.txt
