Change ambigous test case...
The include source of "../shared_files/extra_test_data/**" would
only find "../shared_files/extra_test_data/extra_test_file.txt"
which after strip_components 3 gives "extra_test_file.txt"

Question: did the ".shed.yml" destination mean call this file
"test-data" [sic] or use "test-data/extra_test_file.txt" instead?

What if the include source glob matches multiple files? Then might
expect destination must be a folder?

Using destination "test-data/" seem unambiguous.

--- a/tests/data/repos/multi_repos_flat_configured_complex/.shed.yml
+++ b/tests/data/repos/multi_repos_flat_configured_complex/.shed.yml
@@ -14,7 +14,7 @@ repositories:
         destination: CITATION.txt
       - source: ../shared_files/extra_test_data/**
         strip_components: 3  # drop "..", "shared_files", "extra_test_data" from source
-        destination: test-data
+        destination: test-data/
   cs-cat2:
     description: "The tool Cat 2 from the cat tool suite."
     include:
