Fix pretty tool tests.
Close #188.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include planemo/xml/xsd/*
 include planemo/xml/xsd/tool/*
 include planemo_ext/tool_factory_2/*
 include planemo_ext/galaxy/util/docutils_template.txt
+include planemo/reports/*
