Improvements to developer experience.
 - Add more information to CONTRIBUTING.rst - including information on tox and running specific tests.
 - Add new quick-test make target for running the fatest tests quickly (and documentation).
 - Add new tox make target for running specific tests with tox (and documentation).
 - Add new _open-docs make target open pre-existing docs locally.
 - Modify lint make target to lint through tox to verify both Python 2 and Python 3 syntax.
 - Add new flake8 make target corresponding to the old lint target.
 - Add Makefile targets for installing pre-commit git hooks - one that lints and one that lints and runs the new quick-test target (and documentation).
 - Fix dev-requirements.txt which had a duplicated wheel entry.
 - General Makefile refactoring and documentation improvements.

Closes #209.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
-# TODO: add py34-lint , py34 to envlist
+# TODO: py34 to envlist
 # TODO: implement doc linting
 [tox]
-envlist = py27-lint, py27-lint-readme, py26, py27
+envlist = py34-lint, py27-lint, py27-lint-readme, py26, py27
 
 [testenv]
 commands = {envpython} setup.py nosetests []
