Fixup sample Vagrantfile.
Recently switched user to 'ubuntu' - this sample needs to be updated for that. Also forward tool shed stuff ahead of that being available in VM prior to the GCC.

xref galaxyproject/planemo-machine#36

--- a/docs/Vagrantfile
+++ b/docs/Vagrantfile
@@ -3,9 +3,11 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "planemo"
   config.vm.box_url = "https://images.galaxyproject.org/planemo/latest.box"
+  config.ssh.username = "ubuntu"
 
-  # Forward nginx.
+  # Forward nginx and tool shed.
   config.vm.network "forwarded_port", guest: 80, host: 8010
+  config.vm.network "forwarded_port", guest: 9009, host: 9009
 
   # Disable default mount and mount pwd to /opt/galaxy/tools instead.
   config.vm.synced_folder ".", "/vagrant", disabled: true
