--- a/docs/.planemo.yml
+++ b/docs/.planemo.yml
@@ -1,5 +1,5 @@
 ## Specify a default galaxy_root for test and server commands here.
-#galaxy_root: /home/user/galaxy-central
+#galaxy_root: /home/user/galaxy
 
 ## Specify github credentials for publishing gists links (e.g. with
 ## the share_test command).
@@ -9,8 +9,8 @@
 
 sheds:
   username: "<TODO>"
-  # For each tool shed you wish to target, uncomment key or both email and
-  # password.
+  # For each Tool Shed you wish to target enter the API key
+  # or both email and password.
   toolshed:
     key: "<TODO>"
     #email: "<TODO>"
