--- a/docs/.planemo.yml
+++ b/docs/.planemo.yml
@@ -8,7 +8,6 @@
 #  password: <password>
 
 sheds:
-  username: "<TODO>"
   # For each Tool Shed you wish to target enter the API key
   # or both email and password.
   toolshed:
@@ -21,5 +20,10 @@ sheds:
     #password: "<TODO>"
   local:
     key: "<TODO>"
+    #email: "<TODO>"
+    #password: "<TODO>"
+  custom_shed:
+    key: "<TODO>"
+    url: "http://customurl/"
     #email: "<TODO>"
     #password: "<TODO>"
