--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "planemo/xml/xsd/tool"]
 	path = planemo/xml/xsd/tool
 	url = https://github.com/JeanFred/Galaxy-XSD
+[submodule "planemo_ext/cwl2script"]
+	path = planemo_ext/cwl2script
+	url = https://github.com/common-workflow-language/cwl2script.git
