--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,17 @@ env:
   - TOX_ENV=py27-lint-readme
   - TOX_ENV=py26
   - TOX_ENV=py27
+  - TOX_ENV=py34
 
 install:
   # Setup git to allow git operations.
   - git config --global user.name "Travis Test User"
   - git config --global user.email "planemo_test@galaxyproject.org"
   - pip install tox coveralls
+
+matrix:
+  allow_failures:
+    - env: TOX_ENV=py34
 
 script: tox -e $TOX_ENV
 
