--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 # TODO: implement doc linting
 [tox]
 envlist = py34-lint, py27-lint, py27-lint-readme, py26, py27
+source_dir = planemo
+test_dir = tests
 
 [testenv]
 commands = {envpython} setup.py nosetests []
@@ -10,14 +12,17 @@ deps =
     nose
     coverage
     flask
+setenv =
+       SOURCE_DIR = planemo
+       TEST_DIR = tests
 
 [testenv:py27-lint]
-commands = flake8 planemo tests
+commands = flake8 {[tox]source_dir} {[tox]source_dir}
 skip_install = True
 deps = flake8
 
 [testenv:py34-lint]
-commands = flake8 planemo tests
+commands = flake8 {[tox]source_dir} {[tox]source_dir}
 skip_install = True
 deps = flake8
 
