What is breaking those tests?

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,8 @@ source_dir = planemo
 test_dir = tests
 
 [testenv]
-#commands = {envpython} setup.py nosetests []
-commands = nosetests []
+commands = {envpython} setup.py nosetests []
+#commands = nosetests []
 deps =
     -rrequirements.txt
     py27: cwltool
