Drop support for Python 2.6.
😢

Add warning if trying to run setup.py on older Python's as suggested by @peterjc.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # TODO: py34 to envlist
 # TODO: implement doc linting
 [tox]
-envlist = py34-lint, py27-lint, py27-lint-readme, py26, py27
+envlist = py34-lint, py27-lint, py27-lint-readme, py27
 source_dir = planemo
 test_dir = tests
 
@@ -11,7 +11,6 @@ commands = {envpython} setup.py nosetests []
 deps =
     -rrequirements.txt
     py27: cwltool
-    py26: unittest2
     nose
     coverage
     flask
