--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
 # TODO: py34 to envlist
 # TODO: implement doc linting
 [tox]
-envlist = py34-lint, py27-lint, py27-lint-readme, py27
+envlist = py34-lint, py27-lint, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27
 source_dir = planemo
 test_dir = tests
 
 [testenv]
 commands = {envpython} setup.py nosetests []
-#commands = nosetests []
 deps =
     -rrequirements.txt
     py27: cwltool
@@ -19,6 +18,20 @@ deps =
 commands = flake8 {[tox]source_dir} {[tox]source_dir}
 skip_install = True
 deps = flake8
+
+[testenv:py27-lint-imports]
+commands = flake8 {[tox]source_dir} {[tox]source_dir}
+skip_install = True
+deps =
+    flake8
+    flake8-import-order
+
+[testenv:py27-lint-docstrings]
+commands = flake8 {[tox]source_dir} {[tox]source_dir}
+skip_install = True
+deps =
+    flake8
+    flake8_docstrings
 
 [testenv:py34-lint]
 commands = flake8 {[tox]source_dir} {[tox]source_dir}
