--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ aenum
 Click
 six>=1.7.0
 pyyaml
-bioblend
+bioblend>=0.7.0
 docutils
 jinja2
 glob2
 virtualenv
+gxformat2
 galaxy-lib>=16.7.6
 cwltool>=1.0.20160511162129 ; python_version == '2.7'
