--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # TODO: py34 to envlist
 # TODO: implement doc linting
 [tox]
-envlist = py34-lint, py27-lint, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27
+envlist = py34-lint, py27-lint, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27, py27-lint-docs
 source_dir = planemo
 test_dir = tests
 
@@ -44,3 +44,11 @@ skip_install = True
 whitelist_externals = make
 deps =
     readme
+
+[testenv:py27-lint-docs]
+commands = make lint-docs
+skip_install = True
+whitelist_externals = make
+deps =
+    -rrequirements.txt
+    -rdev-requirements.txt
