--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
   - TOX_ENV=py27-lint
   - TOX_ENV=py34-lint
   - TOX_ENV=py27-lint-readme
+  - TOX_ENV=py27-lint-docs
   - TOX_ENV=py27
   - TOX_ENV=py34
   - TOX_ENV=py27-lint-imports
