Fix cwltool - https://github.com/common-workflow-language/cwltool/pull/75 broke Galaxy API.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ jinja2
 glob2
 virtualenv
 galaxy-lib>=16.7.2
-cwltool ; python_version == '2.7'
+cwltool==1.0.20160507101510 ; python_version == '2.7'
