--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ test_dir = tests
 commands = {envpython} setup.py nosetests []
 deps =
     -rrequirements.txt
-    py27: cwltool
+    py27: cwltool==1.0.20160507101510
     nose
     coverage
     flask
