--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ test_dir = tests
 
 [testenv]
 commands = {envpython} setup.py nosetests []
+pass_env = PLANEMO_*
 deps =
     -rrequirements.txt
     nose
