--- a/docs/.planemo.yml
+++ b/docs/.planemo.yml
@@ -1,8 +1,8 @@
-## Specify a default galaxy_root for test and server commands here.
+## Specify a default galaxy_root for the `test` and `serve` commands here.
 #galaxy_root: /home/user/galaxy
 
-## Specify github credentials for publishing gists links (e.g. with
-## the share_test command).
+## Specify github credentials for publishing gist links (e.g. with
+## the `share_test` command).
 #github:
 #  username: <username>
 #  password: <password>
