Work toward fixing up dependencies and testing.
 - Pin an absolute version of cwltool supported.
 - Update galaxy-lib for new 'description' -> 'doc' syntax in cwltool 1.0.
 - Add more decorators and test descriptions - markup slow tests and test that use cwltool.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ glob2
 virtualenv
 gxformat2
 ephemeris
-galaxy-lib>=16.7.9
-cwltool>=1.0.20160616182520 ; python_version == '2.7'
+galaxy-lib>=16.7.10
+cwltool==1.0.20160726135535 ; python_version == '2.7'
