--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,11 @@ deps =
     coverage
     flask
 
+[testenv:py27-quick]
+setenv:
+    PLANEMO_SKIP_SLOW_TESTS=1
+    PLANEMO_SKIP_GALAXY_TESTS=1
+
 [testenv:py27-lint]
 commands = flake8 {[tox]source_dir} {[tox]source_dir}
 skip_install = True
