Rework tox ini for quick python 3.4 testing also.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # TODO: py34 to envlist
 # TODO: implement doc linting
 [tox]
-envlist = py34-lint, py27-lint, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27, py27-lint-docs
+envlist = py{27,34}-lint, py{27,34}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}
 source_dir = planemo
 test_dir = tests
 
@@ -12,11 +12,9 @@ deps =
     nose
     coverage
     flask
-
-[testenv:py27-quick]
-setenv:
-    PLANEMO_SKIP_SLOW_TESTS=1
-    PLANEMO_SKIP_GALAXY_TESTS=1
+setenv =
+    quick: PLANEMO_SKIP_SLOW_TESTS=1
+    quick: PLANEMO_SKIP_GALAXY_TESTS=1
 
 [testenv:py27-lint]
 commands = flake8 {[tox]source_dir} {[tox]source_dir}
@@ -54,5 +52,4 @@ commands = make lint-docs
 skip_install = True
 whitelist_externals = make
 deps =
-    -rrequirements.txt
     -rdev-requirements.txt
