--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ virtualenv
 gxformat2
 ephemeris>=0.2.0
 galaxy-lib>=16.7.10
+html5lib>=0.9999999,!=0.99999999,!=0.99999999 ; python_version == '2.7'
 cwltool==1.0.20160726135535 ; python_version == '2.7'
