Fix doc linting for recent change.

--- a/tox.ini
+++ b/tox.ini
@@ -52,4 +52,5 @@ commands = make lint-docs
 skip_install = True
 whitelist_externals = make
 deps =
+    -rrequirements.txt
     -rdev-requirements.txt
