--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ test_dir = tests
 commands = {envpython} setup.py nosetests []
 passenv = PLANEMO_*
 deps =
+    -rrequirements.txt
     nose
     coverage
     flask
