Fix import order throughout project.
- Fix order to the Galaxy standard throughout.
- Make flake8-import-order part of the normal linting process.
- Remove the tox import order specific test from Travis.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,5 @@ logging-level=INFO
 max-line-length = 150
 max-complexity = 11
 exclude=planemo/cwl/cwl2script
+import-order-style = smarkets
+application-import-names = planemo,test
