--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,9 @@ setenv =
 [testenv:py27-lint]
 commands = flake8 {[tox]source_dir} {[tox]source_dir}
 skip_install = True
-deps = flake8
+deps =
+     flake8
+     flake8-import-order
 
 [testenv:py27-lint-imports]
 commands = flake8 {[tox]source_dir} {[tox]source_dir}
