Fix to restore linting of tests directory.
Fix up regressions missed while linting was off and add import order linting for the whole module.

--- a/tox.ini
+++ b/tox.ini
@@ -18,28 +18,28 @@ setenv =
     quick: PLANEMO_SKIP_GALAXY_TESTS=1
 
 [testenv:py27-lint]
-commands = flake8 {[tox]source_dir} {[tox]source_dir}
+commands = flake8 {[tox]source_dir} {[tox]test_dir}
 skip_install = True
 deps =
      flake8
      flake8-import-order
 
 [testenv:py27-lint-imports]
-commands = flake8 {[tox]source_dir} {[tox]source_dir}
+commands = flake8 {[tox]source_dir} {[tox]test_dir}
 skip_install = True
 deps =
     flake8
     flake8-import-order
 
 [testenv:py27-lint-docstrings]
-commands = flake8 {[tox]source_dir} {[tox]source_dir}
+commands = flake8 {[tox]source_dir} {[tox]test_dir}
 skip_install = True
 deps =
     flake8
     flake8_docstrings
 
 [testenv:py34-lint]
-commands = flake8 {[tox]source_dir} {[tox]source_dir}
+commands = flake8 {[tox]source_dir} {[tox]test_dir}
 skip_install = True
 deps = flake8
 
