Implement ``conda_lint``.
With test cases for every failure mode for linting.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,6 @@ logging-level=INFO
 [flake8]
 max-line-length = 150
 max-complexity = 11
-exclude=planemo/cwl/cwl2script
+exclude=planemo/cwl/cwl2script,planemo/conda_verify
 import-order-style = smarkets
 application-import-names = planemo,test
