--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ ephemeris>=0.2.0
 galaxy-lib>=17.9.0
 html5lib>=0.9999999,!=0.99999999,!=0.999999999,!=1.0b10,!=1.0b09 ; python_version == '2.7'
 cwltool==1.0.20170224141733 ; python_version == '2.7'
+ruamel.yaml<0.15,>=0.12.4
