--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   - TOX_ENV=py27-lint-readme
   - TOX_ENV=py27-lint-docs
   - TOX_ENV=py27-quick
+  - TOX_ENV=py34-quick
   - TOX_ENV=py27
   - TOX_ENV=py34
   - TOX_ENV=py27-lint-docstrings
