[WIP] Another shed enabled workflow test.
xref https://github.com/galaxyproject/planemo/pull/775#issuecomment-368255134.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   - TOX_ENV=py34-gx-dev
   - TOX_ENV=py34-gx-1709
   - TOX_ENV=py27-lint-docstrings
+  - TOX_ENV=py27-realworkflow
 
 install:
   # Setup git to allow git operations.
