--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # TODO: implement doc linting
 [tox]
-envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1801,1709,1705}
+envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1801,1709,1705}, py{27,34,35}-realworkflow
 source_dir = planemo
 test_dir = tests
 
@@ -18,6 +18,8 @@ setenv =
     quick: PLANEMO_SKIP_SLOW_TESTS=1
     quick: PLANEMO_SKIP_GALAXY_TESTS=1
     gx: NOSE_ATTR=tests_galaxy_branch
+    realworkflow: NOSE_ATTR=tests_real_workflow
+    realworkflow: PLANEMO_REAL_WORKFLOW_TEST=1
     master: PLANEMO_TEST_GALAXY_BRANCH=master
     dev: PLANEMO_TEST_GALAXY_BRANCH=dev
     1801: PLANEMO_TEST_GALAXY_BRANCH=release_18.01
