Improve how various branches of Galaxy are testing.
Annotate tests that include a significant aspect of Galaxy behavior testing and paramerize them to allow overridding the target branch via an environment variable. By default switch all of these to test master, but create new tox profiles and Travis targets that only run these tests and run for other branches (dev, release_18.01, and release_17.09 currently).

Also drop the py27-quick set of tests from Travis - going to be future facing and be happy with the python 3 tests for the quick turn around / stable tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ env:
   - TOX_ENV=py34-lint
   - TOX_ENV=py27-lint-readme
   - TOX_ENV=py27-lint-docs
-  - TOX_ENV=py27-quick
   - TOX_ENV=py34-quick
   - TOX_ENV=py27
   - TOX_ENV=py34
+  - TOX_ENV=py34-gx-1801
+  - TOX_ENV=py34-gx-dev
+  - TOX_ENV=py34-gx-1709
   - TOX_ENV=py27-lint-docstrings
 
 install:
