--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 # TODO: implement doc linting
 [tox]
-envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}
+envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1801,1709,1705}
 source_dir = planemo
 test_dir = tests
 
 [testenv]
-commands = {envpython} setup.py nosetests []
-passenv = PLANEMO_*
+commands = nosetests
+passenv = 
+    PLANEMO_*
+    NOSE_*
 deps =
     -rrequirements.txt
     nose
@@ -15,6 +17,12 @@ deps =
 setenv =
     quick: PLANEMO_SKIP_SLOW_TESTS=1
     quick: PLANEMO_SKIP_GALAXY_TESTS=1
+    gx: NOSE_ATTR=tests_galaxy_branch
+    master: PLANEMO_TEST_GALAXY_BRANCH=master
+    dev: PLANEMO_TEST_GALAXY_BRANCH=dev
+    1801: PLANEMO_TEST_GALAXY_BRANCH=release_18.01
+    1709: PLANEMO_TEST_GALAXY_BRANCH=release_17.09
+    1705: PLANEMO_TEST_GALAXY_BRANCH=release_17.05
 
 [testenv:py27-lint]
 commands = flake8 {[tox]source_dir} {[tox]test_dir}
