--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,23 @@ language: python
 sudo: false
 python: 2.7
 env:
-  - TOX_ENV=py27-lint
-  - TOX_ENV=py34-lint
-  - TOX_ENV=py27-lint-readme
-  - TOX_ENV=py27-lint-docs
-  - TOX_ENV=py34-quick
-  - TOX_ENV=py27
-  - TOX_ENV=py34
-  - TOX_ENV=py34-gx-1801
-  - TOX_ENV=py34-gx-dev
-  - TOX_ENV=py34-gx-1709
-  - TOX_ENV=py27-lint-docstrings
+  global:
+    - PLANEMO_SKIP_REDUNDANT_TESTS=1
+    - PLANEMO_ENABLE_POSTGRES_TESTS=1
+    - PLANEMO_SKIP_GALAXY_CWL_TESTS=1
+    - PLANEMO_TEST_WORKFLOW_RUN_PROFILE=travisworkflowtests
+  matrix:
+    - TOX_ENV=py27-lint
+    - TOX_ENV=py34-lint
+    - TOX_ENV=py27-lint-readme
+    - TOX_ENV=py27-lint-docs
+    - TOX_ENV=py34-quick
+    - TOX_ENV=py27
+    - TOX_ENV=py34
+    - TOX_ENV=py34-gx-1801
+    - TOX_ENV=py34-gx-dev
+    - TOX_ENV=py34-gx-1709
+    - TOX_ENV=py27-lint-docstrings
 
 install:
   - pip install tox coveralls
@@ -21,7 +27,7 @@ matrix:
   allow_failures:
     - env: TOX_ENV=py27-lint-docstrings
 
-script: PLANEMO_SKIP_REDUNDANT_TESTS=1 PLANEMO_ENABLE_POSTGRES_TESTS=1 PLANEMO_SKIP_GALAXY_CWL_TESTS=1 PLANEMO_TEST_WORKFLOW_RUN_PROFILE=travisworkflowtests tox -e $TOX_ENV
+script: tox -e $TOX_ENV
 
 after_success:
   - coveralls
