--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # TODO: implement doc linting
 [tox]
-envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1801,1709,1705}
+envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1801,1709,1705}, py27-gxwf-test-test
 source_dir = planemo
 test_dir = tests
 
@@ -64,3 +64,8 @@ whitelist_externals = make
 deps =
     -rrequirements.txt
     -rdev-requirements.txt
+
+[testenv:py27-gxwf-test-test]
+commands = make gxwf-test-test
+skip_install = True
+whitelist_externals = make
