--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # TODO: implement doc linting
 [tox]
-envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1801,1709,1705}
+envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1805,1801,1709,1705}
 source_dir = planemo
 test_dir = tests
 
@@ -20,6 +20,7 @@ setenv =
     gx: NOSE_ATTR=tests_galaxy_branch
     master: PLANEMO_TEST_GALAXY_BRANCH=master
     dev: PLANEMO_TEST_GALAXY_BRANCH=dev
+    1805: PLANEMO_TEST_GALAXY_BRANCH=release_18.05
     1801: PLANEMO_TEST_GALAXY_BRANCH=release_18.01
     1709: PLANEMO_TEST_GALAXY_BRANCH=release_17.09
     1705: PLANEMO_TEST_GALAXY_BRANCH=release_17.05
