More work on doc tests.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
-# TODO: implement doc linting
 [tox]
-envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1805,1801,1709,1705}
+envlist = py{27,34}-lint, py{27,34,35}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35}, py{27,34,35}-gx-{master,dev,1805,1801,1709,1705}, doc-test
 source_dir = planemo
 test_dir = tests
 
@@ -9,6 +8,8 @@ commands = nosetests
 passenv = 
     PLANEMO_*
     NOSE_*
+    HOME
+    DOCS
 deps =
     -rrequirements.txt
     nose
@@ -65,3 +66,11 @@ whitelist_externals = make
 deps =
     -rrequirements.txt
     -rdev-requirements.txt
+
+[testenv:doc-test]
+commands = bash scripts/run_doc_test.sh
+skip_install = True
+skipsdist = True
+whitelist_externals = bash
+deps = 
+
