--- a/tests/Dockerfile.jenkins
+++ b/tests/Dockerfile.jenkins
@@ -5,4 +5,6 @@ RUN apt-get update && \
         git nodejs && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+ENV HOME=/tmp
+
 ENTRYPOINT []
