--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ configparser
 six>=1.7.0
 pyaml
 pyyaml
+oyaml
 bioblend>=0.10.0
 docutils
 jinja2
@@ -13,6 +14,6 @@ virtualenv
 lxml
 gxformat2>=0.2.0
 ephemeris>=0.8
-galaxy-lib>=18.5.14
+galaxy-lib>=18.5.13
 html5lib>=0.9999999,!=0.99999999,!=0.999999999,!=1.0b10,!=1.0b09
 cwltool==1.0.20180508202931
