Don't test python3 on python2 and vice versa

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ deps =
 setenv =
     quick: PLANEMO_SKIP_SLOW_TESTS=1
     quick: PLANEMO_SKIP_GALAXY_TESTS=1
+    py27: PLANEMO_SKIP_PYTHON3=1
+    py36: PLANEMO_SKIP_PYTHON2=1
     gx: NOSE_ATTR=tests_galaxy_branch
     master: PLANEMO_TEST_GALAXY_BRANCH=master
     dev: PLANEMO_TEST_GALAXY_BRANCH=dev
