--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,12 @@ matrix:
       env: TOX_ENV=py27-lint-docs
     - python: 2.7
       env: TOX_ENV=py27-lint-docstrings
-    - python: 2.7
-      env: TOX_ENV=py27
+    - python: 3.6
+      env: TOX_ENV=py36-lint
     - python: 3.6
       env: TOX_ENV=py36-quick
+    - python: 2.7
+      env: TOX_ENV=py27
     - python: 3.6
       env: TOX_ENV=py36
   allow_failures:
