--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,34,35,36}-lint, py{27,34,35,36}-quick, py27-lint-imports, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35,36}, py{27,34,35,36}-gx-{master,dev,1805,1801,1709,1705}, doc-test
+envlist = py{27,34,35,36}-lint, py{27,34,35,36}-quick, py27-lint-docstrings, py27-lint-readme, py27-lint-docs, py{27,34,35,36}, py{27,34,35,36}-gx-{master,dev,1805,1801,1709,1705}, doc-test
 source_dir = planemo
 test_dir = tests
 
@@ -30,18 +30,11 @@ setenv =
     1705: PLANEMO_TEST_GALAXY_BRANCH=release_17.05
 
 [testenv:py27-lint]
-commands = flake8 {[tox]source_dir} {[tox]test_dir}
+commands = flake8
 skip_install = True
 deps =
      flake8
      flake8-import-order
-
-[testenv:py27-lint-imports]
-commands = flake8 {[tox]source_dir} {[tox]test_dir}
-skip_install = True
-deps =
-    flake8
-    flake8-import-order
 
 [testenv:py27-lint-docstrings]
 commands = flake8 {[tox]source_dir} {[tox]test_dir}
@@ -51,9 +44,11 @@ deps =
     flake8_docstrings
 
 [testenv:py36-lint]
-commands = flake8 {[tox]source_dir} {[tox]test_dir}
+commands = flake8
 skip_install = True
-deps = flake8
+deps =
+     flake8
+     flake8-import-order
 
 [testenv:py27-lint-readme]
 commands = make lint-readme
