Add `requirements.txt` and `dev-requirements.txt` to `MANIFEST.in`
They are presently missing from sdist distributions, which means
that:

```
pip install --no-binary :all: planemo
```

does not install Planemo dependencies.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include *.rst LICENSE
+include *.rst LICENSE *.txt
 include planemo/xml/xsd/*
 include planemo_ext/tool_factory_2/*
 include planemo/reports/*
