--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,6 @@ logging-level=INFO
 [flake8]
 max-line-length = 150
 max-complexity = 13
-exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,planemo/cwl/cwl2script,planemo/conda_verify,planemo_ext/tool_factory_2/rgToolFactory2.py
+exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,planemo/cwl/cwl2script,planemo_ext/tool_factory_2/rgToolFactory2.py
 import-order-style = smarkets
 application-import-names = planemo,test
