--- a/.travis.yml
+++ b/.travis.yml
@@ -7,32 +7,32 @@ env:
     - PLANEMO_TEST_WORKFLOW_RUN_PROFILE=travisworkflowtests
 matrix:
   include:
-    - python: 2.7
-      env: TOX_ENV=py27-lint
-    - python: 3.7
-      env: TOX_ENV=py37-lint_readme
-    - python: 3.7
-      env: TOX_ENV=py37-lint_docs
+    # - python: 2.7
+    #   env: TOX_ENV=py27-lint
+    # - python: 3.7
+    #   env: TOX_ENV=py37-lint_readme
+    # - python: 3.7
+    #   env: TOX_ENV=py37-lint_docs
     - python: 3.7
       env: TOX_ENV=py37-lint_docstrings
-    - python: 3.7
-      env: TOX_ENV=py37-lint
-    - python: 3.7
-      env: TOX_ENV=py37-quick
-    - python: 2.7
-      env: TOX_ENV=py27-unit
-    - python: 3.7
-      env: TOX_ENV=py37-unit
+    # - python: 3.7
+    #   env: TOX_ENV=py37-lint
+    # - python: 3.7
+    #   env: TOX_ENV=py37-quick
+    # - python: 2.7
+    #   env: TOX_ENV=py27-unit
+    # - python: 3.7
+    #   env: TOX_ENV=py37-unit
   allow_failures:
     - env: TOX_ENV=py37-lint_docstrings
 
 install:
-  - pip install tox coveralls
+  - pip install tox
 
 script: tox -e $TOX_ENV
 
-after_success:
-  - coveralls
-
-services:
-  - postgresql
+# after_success:
+#   - coveralls
+#
+# services:
+#   - postgresql
