Enable test on pull request

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,8 @@
 name: Python CI
-on: [push]
+on: [push, pull_request]
 env:
   PLANEMO_SKIP_REDUNDANT_TESTS: 1
-  PLANEMO_ENABLE_POSTGRES_TESTS: 0
+  PLANEMO_ENABLE_POSTGRES_TESTS: 1
   PLANEMO_SKIP_GALAXY_CWL_TESTS: 1
   PLANEMO_TEST_WORKFLOW_RUN_PROFILE: 1
 jobs:
