--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ Click
 configparser
 cwltool==1.0.20180820141117
 docutils
-ephemeris>=0.10.0
-galaxy-lib>=18.9.2
+ephemeris>=0.10.3
+galaxy-containers
+galaxy-tool-util>=19.9.0
 glob2
 gxformat2>=0.8.0
 jinja2
