Fix fleeqtk recipe

--- a/project_templates/conda_answers_cwl/exercise_2/fleeqtk/meta.yaml
+++ b/project_templates/conda_answers_cwl/exercise_2/fleeqtk/meta.yaml
@@ -12,8 +12,8 @@ build:
 
 requirements:
   build:
-    - gcc   # [not osx]
-    - llvm  # [osx]
+    - {{ compiler('c') }}
+  host:
     - zlib
   run:
     - zlib
@@ -25,4 +25,4 @@ about:
 
 test:
   commands:
-    - sh -c 'fleeqtk 2>&1 | grep -q seq'
+    - fleeqtk 2>&1 | grep -q subseq
