--- a/project_templates/conda_answers/exercise_2/fleeqtk/meta.yaml
+++ b/project_templates/conda_answers/exercise_2/fleeqtk/meta.yaml
@@ -12,12 +12,11 @@ build:
 
 requirements:
   build:
-    - gcc   # [not osx]
-    - llvm  # [osx]
+    - {{ compiler('c') }}
+  host:
     - zlib
   run:
     - zlib
-
 
 about:
   home: https://github.com/jmchilton/fleeqtk
@@ -26,4 +25,4 @@ about:
 
 test:
   commands:
-    - fleeqtk seq
+    - fleeqtk 2>&1 | grep -q subseq
