--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ deps =
     lint_docs,quick,unit: -rrequirements.txt
     lint_docstrings: flake8_docstrings
     lint_readme: readme
+    lint_readme: twine
     quick,unit: nose
     quick,unit: coverage
     quick,unit: flask
