--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
         python-version: [2.7, 3.7]
         tox-action:
           - lint
-          - lint_readme
+          - check_sdist
           - lint_docs
           - quick
           - unit
