--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,8 @@ env:
   PLANEMO_ENABLE_POSTGRES_TESTS: 1
   PLANEMO_SKIP_GALAXY_CWL_TESTS: 1
   PLANEMO_TEST_WORKFLOW_RUN_PROFILE: 1
+  PGPASSWORD: postgres
+  PGHOST: localhost
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -17,6 +19,17 @@ jobs:
           - lint_docs
           - quick
           - unit
+    services:
+      postgres:
+        image: postgres:10.8
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports:
+        - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v1
         with:
@@ -25,6 +38,9 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Test psql
+        run: |
+          psql --tuples-only --username postgres -P pager=off --list
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
