--- a/tests/data/wf5-collection-input.gxwf.yml
+++ b/tests/data/wf5-collection-input.gxwf.yml
@@ -8,7 +8,7 @@ inputs:
 
 outputs:
   - id: wf_output_1
-    source: first_cat#out_file1
+    outputSource: first_cat/out_file1
 
 steps:
   - tool_id: cat_list
