--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,6 @@
 name: Python CI
 on: [push, pull_request]
 env:
-  PLANEMO_SKIP_REDUNDANT_TESTS: 1
   PLANEMO_ENABLE_POSTGRES_TESTS: 1
   PLANEMO_SKIP_GALAXY_CWL_TESTS: 1
   PLANEMO_TEST_WORKFLOW_RUN_PROFILE: 1
@@ -10,6 +9,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
@@ -17,8 +17,18 @@ jobs:
         tox-action:
           - lint
           - lint_docs
-          - quick
-          - unit
+          - unit-quick
+          #- unit-diagnostic-servebasic
+          #- unit-diagnostic-servebasic-gx-2005
+          #- unit-diagnostic-servebasic-gx-master
+          - unit-diagnostic-servebasic-gx-dev
+          #- unit-diagnostic-servetraining
+          #- unit-diagnostic-servecmd
+          #- unit-diagnostic-trainingwfcmd
+          - unit-nonredundant-noclientbuild-noshed-gx-2005
+          - unit-nonredundant-noclientbuild-noshed-gx-dev
+          - unit-nonredundant-noclientbuild-noshed
+          - unit-diagnostic-serveclientcmd
     services:
       postgres:
         image: postgres:10.8
@@ -45,6 +55,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox coveralls
+      - name: Checkout system space
+        run: |
+          df
       - name: Test with tox
         run: |
           TOXENV=$(echo $TOXENV | sed 's/\.//') tox
