--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,19 @@ matrix:
   include:
     - python: 3.7
       env: TOX_ENV=py37-lint_docstrings
+    - python: 3.7
+      env: TOX_ENV=py37-unit-diagnostic-serveshed
+    - python: 3.7
+      env: TOX_ENV=py37-unit-quick
+    - python: 3.7
+      env: TOX_ENV=py37-unit-nonredundant-noclientbuild-noshed-gx-2005
+    - python: 3.7
+      env: TOX_ENV=py37-unit-nonredundant-noclientbuild-noshed-gx-master
+    - python: 3.7
+      env: TOX_ENV=py37-unit-diagnostic-serveshedcmd-gx-master
   allow_failures:
     - env: TOX_ENV=py37-lint_docstrings
+    - env: TOX_ENV=py37-unit-diagnostic-serveshedcmd-gx-master
 
 install:
   - pip install tox
