--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ cwltool==1.0.20191225192155
 docutils
 ephemeris>=0.10.3
 galaxy-containers
-galaxy-tool-util>=20.5.0.dev1
-galaxy-util>=20.1.0.dev0  # temporarily needed because this is a pre-release and https://github.com/pypa/pip/issues/988
+galaxy-tool-util>=20.5.0
+galaxy-util>=20.5.0
 glob2
 gxformat2>=0.8.0
 jinja2
