Set more realistic docstring linting goals.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ test_dir = tests
 commands =
     lint: flake8
     lint_docs: make lint-docs
-    lint_docstrings: flake8 {[tox]source_dir} {[tox]test_dir}
+    lint_docstrings: flake8 --ignore='D107,D401,D105' {[tox]source_dir}
     unit: pytest {env:PYTEST_CAPTURE:} -m {env:PYTEST_MARK:""} {env:PYTEST_TARGET:{[tox]test_dir}} {posargs}
 
 passenv = 
