--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
     lint: flake8
     lint_docs: make lint-docs
     lint_docstrings: flake8 --ignore='D107,D401,D105' {[tox]source_dir}
-    unit: pytest {env:PYTEST_CAPTURE:} -m {env:PYTEST_MARK:""} {env:PYTEST_TARGET:{[tox]test_dir}} {posargs}
+    unit: pytest {env:PYTEST_FAIL_FAIL:} {env:PYTEST_CAPTURE:} -m {env:PYTEST_MARK:""} {env:PYTEST_TARGET:{[tox]test_dir}} {posargs}
 
 passenv = 
     PLANEMO_*
@@ -29,6 +29,7 @@ setenv =
     gx: PYTEST_MARK="tests_galaxy_branch"
     diagnostic: PLANEMO_TEST_VERBOSE=1
     diagnostic: PYTEST_CAPTURE="--capture=no"
+    failfast: PYTEST_FAIL_FAIL="-x"
     servecmd: PYTEST_TARGET="tests/test_cmd_serve.py::ServeTestCase::test_serve_daemon"
     serveshedcmd: PYTEST_TARGET="tests/test_cmd_serve.py::ServeTestCase::test_shed_serve"
     serveclientcmd: PYTEST_TARGET="tests/test_cmd_serve.py::ServeTestCase::test_serve_client_python3"
