--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,11 @@ jobs:
         - image: python:3.5
       steps:
         - checkout
+        - run:
+          name: "Pull Submodules"
+          command: |
+            git submodule init
+            git submodule update --remote
         - run: pip install tox && tox -e << parameters.tox-env >>
 workflows:
   version: 2
