--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,8 @@ jobs:
         - image: python:3.5
       steps:
         - checkout
-        - run:
-            name: "Pull Submodules"
-            command: |
-              git submodule init
-              git submodule update --remote
-        - run: pip install tox && tox -e << parameters.tox-env >>
+        - run: git submodule sync
+        - run: git submodule update --init
 workflows:
   version: 2
   myproj:
