--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,13 @@ jobs:
         - run: pip install tox && tox -e << parameters.tox-env >>
 workflows:
   version: 2
-  myproj:
+  planemo:
     jobs:
     - toxify:
         matrix:
           parameters:
-            tox-env: ["py35-diagnostic-unit-servebasic-gx-dev"]
+            tox-env:
+              - "py35-diagnostic-unit-servebasic-gx-dev"
+              - "py35-unit-nonredundant-noclientbuild-noshed-gx-2005"
+              - "py35-unit-nonredundant-noclientbuild-noshed-gx-dev"
+              - "py35-unit-nonredundant-noclientbuild-noshed"
