Remove helper code for deprecated commands.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,6 @@
 universal = 1
 
 [nosetests]
-exclude=(planemo_ext|.*cwl2script.*)
 verbosity=6
 detailed-errors=1
 with-doctest=1
@@ -14,6 +13,6 @@ logging-level=INFO
 [flake8]
 max-line-length = 150
 max-complexity = 13
-exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,planemo/cwl/cwl2script,planemo_ext/tool_factory_2/rgToolFactory2.py,project_templates/cwl_draft3_spec/
+exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,project_templates/cwl_draft3_spec/
 import-order-style = smarkets
 application-import-names = planemo,test
