--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,7 @@ setenv =
     initandtest: PYTEST_TARGET="tests/test_init_and_test.py"
     trainingwfcmd: PYTEST_TARGET="tests/test_cmd_training_generate_from_wf.py"
     runcmd: PYTEST_TARGET="tests/test_run.py::RunTestCase::test_run_gxtool_randomlines"
+    wftest: PYTEST_TARGET="tests/test_test_engines.py::test_galaxy_wf_tests"
     condatest: PYTEST_TARGET="tests/test_cmd_test_conda.py::CmdTestCondaTestCase::test_conda_dependencies_by_default"
     nonredundant: PLANEMO_SKIP_REDUNDANT_TESTS=1
     noclientbuild: PLANEMO_SKIP_GALAXY_CLIENT_TESTS=1
