--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ commands =
     lint_docs: make lint-docs
     lint_docstrings: flake8 --ignore='D107,D401,D105' {[tox]source_dir}
     unit: pytest {env:PYTEST_FAIL_FAIL:} {env:PYTEST_CAPTURE:} -m {env:PYTEST_MARK:""} {env:PYTEST_TARGET:{[tox]test_dir}} {posargs}
+    mypy: mypy {[tox]source_dir} {posargs}
 
 passenv = 
     PLANEMO_*
@@ -25,6 +26,7 @@ deps =
     # unit: pytest-timeout
     unit: coverage
     unit: flask
+    mypy: mypy
 setenv =
     gx: PYTEST_MARK="tests_galaxy_branch"
     diagnostic: PLANEMO_TEST_VERBOSE=1
@@ -52,7 +54,7 @@ setenv =
     2005: PLANEMO_TEST_GALAXY_BRANCH=release_20.05
     2001: PLANEMO_TEST_GALAXY_BRANCH=release_20.01
 skip_install =
-    doc_test,lint,lint_docs,lint_docstrings: True
+    doc_test,lint,lint_docs,lint_docstrings,mypy: True
 whitelist_externals =
     lint_docs: make
 
