--- a/setup.cfg
+++ b/setup.cfg
@@ -9,10 +9,12 @@ with-coverage=1
 logging-filter=planemo,galaxy
 logging-level=INFO
 
-
 [flake8]
 max-line-length = 150
 max-complexity = 14
 exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,project_templates/cwl_draft3_spec/
 import-order-style = smarkets
 application-import-names = planemo,test
+
+[mypy]
+ignore_missing_imports = True
