--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36}-lint, py36-unit-quick, py36-lint_docstrings, py36-lint_docs, py{36,37}-unit
+envlist = py{36}-lint, py36-unit-quick, py36-lint_docstrings, py36-lint_docs, py{36,37}-unit, py36-gxwf_test_test
 source_dir = planemo
 test_dir = tests
 
@@ -10,12 +10,14 @@ commands =
     lint_docstrings: flake8 --ignore='D107,D401,D105' {[tox]source_dir}
     unit: pytest {env:PYTEST_FAIL_FAIL:} {env:PYTEST_CAPTURE:} -m {env:PYTEST_MARK:""} {env:PYTEST_TARGET:{[tox]test_dir}} {posargs}
     mypy: mypy {[tox]source_dir} {posargs}
+    gxwf_test_test: make setup-venv gxwf-test-test
 
 passenv = 
     PLANEMO_*
     PG*
     HOME
     DOCS
+
 deps =
     lint: flake8-import-order
     lint,lint_docstrings: flake8
@@ -27,6 +29,7 @@ deps =
     unit: coverage
     unit: flask
     mypy: mypy
+
 setenv =
     gx: PYTEST_MARK="tests_galaxy_branch"
     diagnostic: PLANEMO_TEST_VERBOSE=1
@@ -54,9 +57,11 @@ setenv =
     2005: PLANEMO_TEST_GALAXY_BRANCH=release_20.05
     2001: PLANEMO_TEST_GALAXY_BRANCH=release_20.01
 skip_install =
-    doc_test,lint,lint_docs,lint_docstrings,mypy: True
+    doc_test,lint,lint_docs,lint_docstrings,mypy,gxwf_test_test: True
 whitelist_externals =
     lint_docs: make
+    gxwf_test_test: make
+
 
 [testenv:doc_test]
 commands = bash scripts/run_doc_test.sh
