Add ``workflow_upload`` command
``planemo workflow_upload`` will update or create a github repository
with the contents of a directory that contains a workflow.
Every upload will create a new release.
Workflow versions are taken from the workflow files.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,10 @@ env:
   PLANEMO_TEST_WORKFLOW_RUN_PROFILE: 1
   PGPASSWORD: postgres
   PGHOST: localhost
+  GIT_AUTHOR_NAME: planemo
+  GIT_AUTHOR_EMAIL: planemo@galaxyproject.org
+  GIT_COMMITTER_NAME: planemo
+  GIT_COMMITTER_EMAIL: planemo@galaxyproject.org
 jobs:
   test:
     runs-on: ubuntu-latest
