Explicit tests for Galaxy 20.09.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,7 @@ jobs:
           #- unit-diagnostic-servecmd
           #- unit-diagnostic-trainingwfcmd
           - unit-nonredundant-noclientbuild-noshed-gx-2005
+          - unit-nonredundant-noclientbuild-noshed-gx-2009
           - unit-nonredundant-noclientbuild-noshed-gx-dev
           - unit-nonredundant-noclientbuild-noshed
           - unit-diagnostic-serveclientcmd
