--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ test_dir = tests
 
 [testenv]
 commands =
-    lint: flake8 --ignore I202 I100 # import order complaints
+    lint: flake8 --ignore I202,I100
     lint_docs: make lint-docs
     lint_docstrings: flake8 --ignore='D107,D401,D105' {[tox]source_dir}
     unit: pytest {env:PYTEST_FAIL_FAIL:} {env:PYTEST_CAPTURE:} -m {env:PYTEST_MARK:""} {env:PYTEST_TARGET:{[tox]test_dir}} {posargs}
