ok, let's just exclude the toolfactory from flake8 for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,8 @@ logging-level=INFO
 [flake8]
 max-line-length = 150
 max-complexity = 14
-exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,project_templates/cwl_draft3_spec/
+exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,project_templates/cwl_draft3_spec/,planemo_ext/tool_factory_2
 import-order-style = smarkets
 application-import-names = planemo,test
-
 [mypy]
 ignore_missing_imports = True
