Allow referencing remote URI runnables with local effective paths.
This way we can use local test artifacts with remote workflows in running servers.

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ setenv =
     trainingwfcmd: PYTEST_TARGET="tests/test_cmd_training_generate_from_wf.py"
     runcmd: PYTEST_TARGET="tests/test_run.py::RunTestCase::test_run_gxtool_randomlines"
     wftest: PYTEST_TARGET="tests/test_test_engines.py::test_galaxy_wf_tests"
+    wfidtest: PYTEST_TARGET="tests/test_cmds_with_workflow_id.py"
     condatest: PYTEST_TARGET="tests/test_cmd_test_conda.py::CmdTestCondaTestCase::test_conda_dependencies_by_default"
     nonredundant: PLANEMO_SKIP_REDUNDANT_TESTS=1
     noclientbuild: PLANEMO_SKIP_GALAXY_CLIENT_TESTS=1
