--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,48 +9,27 @@ license = "MIT"
 python = "^3.6"
 allure-python-commons = "*"
 BeautifulSoup4 = "*"
-bioblend = "^0.14.0"
-click = "^8.0.3"
+bioblend = "*"
+click = "*"
 configparser = "*"
-cwltool = "^3.1.20211020155521"
+cwltool = "*"
 docutils = "*"
-ephemeris = "^0.10.3"
+ephemeris = "*"
 galaxy-containers = "*"
-galaxy-tool-util = "^21.1.1"
-galaxy-util = "^20.5.0"
+galaxy-tool-util = "*"
+galaxy-util = "*"
 glob2 = "*"
-gxformat2 = "^0.12.0"
+gxformat2 = "*"
 jinja2 = "*"
 lxml = "*"
 oyaml = "*"
 pyaml = "*"
 pyyaml = "*"
-six = "^1.7.0"
+six = "*"
 virtualenv = "*"
 tabulate = "*"
 
 [tool.poetry.dev-dependencies]
-allure-python-commons = "*"
-BeautifulSoup4 = "*"
-bioblend = "^0.14.0"
-click = "^8.0.3"
-configparser = "*"
-cwltool = "^3.1.20211020155521"
-docutils = "*"
-ephemeris = "^0.10.3"
-galaxy-containers = "*"
-galaxy-tool-util = "^21.1.1"
-galaxy-util = "^20.5.0"
-glob2 = "*"
-gxformat2 = "^0.12.0"
-jinja2 = "*"
-lxml = "*"
-oyaml = "*"
-pyaml = "*"
-pyyaml = "*"
-six = "^1.7.0"
-virtualenv = "*"
-tabulate = "*"
 toil = "*"
 flask = "*"
 Werkzeug = "*"
