Require newer sphinx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ Werkzeug = "*"
 tox = "*"
 pytest = "*"
 coverage = "*"
-sphinx = "*"
+sphinx = "^4.2.0"
 sphinx_rtd_theme = "*"
 recommonmark = "*"
 flake8 = "*"
