--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,20 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.6"
 allure-python-commons = "*"
-bioblend = "*"
-click = "*"
-cwltool = "*"
-ephemeris = "*"
+bioblend = ">=0.14.0"
+click = "!=8.0.2"
+cwltool = ">=1.0.20191225192155"
+ephemeris = ">=0.10.3"
 galaxy-containers = "*"
-galaxy-tool-util = "*"
-galaxy-util = "*"
+galaxy-tool-util = ">=21.1.0.dev4"
+galaxy-util = ">=20.5.0"
 glob2 = "*"
-gxformat2 = "*"
+gxformat2 = ">=0.12.0"
 jinja2 = "*"
 lxml = "*"
 oyaml = "*"
 pyyaml = "*"
-six = "*"
+six = ">=1.7.0"
 virtualenv = "*"
 tabulate = "*"
 
@@ -32,7 +32,7 @@ Werkzeug = "*"
 tox = "*"
 pytest = "*"
 coverage = "*"
-sphinx = "^4.2.0"
+sphinx = ">=4.2.0"
 sphinx_rtd_theme = "*"
 recommonmark = "*"
 flake8 = "*"
